# Ensemble-FF-Fit

./: .build_base.sh.swp  .gitignore  LICENSE  README.md  build_base.sh  build_jaxreaxff.sh  build_lammps.sh  build_mace_freeze.sh  build_unified.sh  constraints.txt  pyproject.toml
EnsembleFFFit/analysis/: best_force_field.py  cn_checker_cli.py  dict_parsers.py  lammps_properties.py  properties.py  variance.py
EnsembleFFFit/generation/defects/: generate_defects_cli.py
EnsembleFFFit/generation/equation_of_state/: generate_EoS_cli.py
EnsembleFFFit/generation/materials_project/: api_key.yml  mp_query_cli.py
EnsembleFFFit/generation/materials_project/examples/: Bi-Se.yml  Nb-Se.yml
EnsembleFFFit/generation/substitutions/: generate_substitutions_cli.py
EnsembleFFFit/generation/uncertainty_quantification/: uncertainty_quantification_cli.py
EnsembleFFFit/generation/vdW_layers/: generate_vdW_spacing_cli.py
EnsembleFFFit/matensemble/: base.py  in_queue.py
EnsembleFFFit/matensemble/lammps/: helpers.py  lammps_matensemble.py  lammps_matensemble_cli.py
EnsembleFFFit/matensemble/lammps/drivers/: batched_generic.py  lammps_mace_kokkos_gpu.py  lammps_reaxff_cpu.py  no_control_generic.py  torch_sim_mace.py
EnsembleFFFit/matensemble/lammps/examples/Perlmutter/: lammps_matensemble.sh
EnsembleFFFit/matensemble/lammps/examples/md/: submit_matensemble_lammps_cpu.sh
EnsembleFFFit/matensemble/mace/: mace_matensemble_cli.py
EnsembleFFFit/matensemble/mace/examples/: submit_matensemble_mace_gpu.sh
EnsembleFFFit/matensemble/reaxff/: copy_by_pattern_cli.py  jaxreaxff_matensemble_cli.py
EnsembleFFFit/matensemble/reaxff/examples/: Jax-ReaxFF_Installation_7252025.pptx  jaxreaxff_matensemble.sh
EnsembleFFFit/matensemble/reaxff/setup/: read.txt
EnsembleFFFit/matensemble/reaxff/setup/Perlmutter/: jaxreaxff.sh  (+1 more)
EnsembleFFFit/similarity/: cluster_lammps_runs.py  structure_similarity.py
EnsembleFFFit/utils/: copy_by_pattern_cli.py  create_lammps_models_cli.py  formation_energy_lammps_runs.py  parse_vasp_aimd_cli.py
examples/: MACE.ipynb
examples/full_fitting/Perlmutter/: Demo.ipynb
examples/full_fitting/Perlmutter/ForceFields/: jaxreaxff-matensemble-41351671.err  jaxreaxff-matensemble-41351671.out  jaxreaxff_matensemble.sh  job.41351671.fail  logs-2025-08-03 08:36:44.088639.txt
examples/full_fitting_2/: Bi_Se_Heteros.ipynb
old/: build_base.sh
(+2041 files in other folders)
